# sizr

./: Cargo.toml  README.md  sfs.js
src/: main.rs
