[package]
name = "sizr"
version = "0.1.0"
authors = ["Christian Todd <christian.todd7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
brotli = "3.3.0"
flate2 = "1.0"
prettytable-rs = "^0.8"
structopt = "0.3"